--- a/Form-Controls/index.html
+++ b/Form-Controls/index.html
@@ -17,6 +17,38 @@
         <!-- 
           try writing out the requirements first as comments
         this will also help you fill in your PR message later-->
+                
+        <!-- What is the customer's name?  -->
+        <div>
+          <label for="name">Name</label>
+          <input type="name" name="name" id="name" required>
+        </div>
+        <!-- What is the customer's email?  -->
+        <div> 
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" required>
+        </div>
+        <!-- What colour should this t-shirt be? -->
+        <div>
+          <label for="color">Color</label>
+          <select name="color" id="color" required>
+            <option value="red">Red</option>
+            <option value="blue">Blue</option>
+            <option value="white">White</option>
+          </select>
+        </div>
+        <!-- What size does the customer want?  -->
+        <div>
+          <label for="size">Size</label>
+          <select name="size" id="size" required>
+            <option value="xs">XS</option>
+            <option value="s">S</option>
+            <option value="m">M</option>
+            <option value="l">L</option>
+            <option value="xl">XL</option>
+            <option value="xxl">XXL</option>
+          </select>
+        </div>
       </form>
     </main>
     <footer>
