--- a/Wireframe/index.html
+++ b/Wireframe/index.html
@@ -17,13 +17,37 @@
   </header>
   <main>
     <article>
-      <img src="placeholder.svg" alt="placeholder picture" />
-      <h2>Title</h2>
+      <img src="readme.webp" alt="readme picture" />
+      <h2>README.md</h2>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam,
-        voluptates. Quisquam, voluptates.
+        A README file serves as a crucial introductory document for a project, providing essential information about its
+        purpose, functionality, installation, usage, and other relevant details to users, collaborators, and
+        maintainers.
       </p>
-      <a href="">Read more</a>
+      <a
+        href="https://docs.github.com/en/repositories/managing-your-repositorys-settings-and-features/customizing-your-repository/about-readmes">Read
+        more</a>
+    </article>
+    <article>
+      <img src="wireframe.png" alt="wireframe picture" />
+      <h2>Wireframe</h2>
+      <p>
+        Wireframing is fancy way of saying "rough sketching" 🎨✏️. The objective is not to have a pixel-perfect
+        rendering of the idea but rather to draw the minimum necessary to communicate. A wireframe should be as simple
+        as possible to convey the concept to the observer without clutter or confusion.
+      </p>
+      <a href="https://github.com/dwyl/learn-wireframing/blob/master/README.md">Read
+        more</a>
+    </article>
+    <article>
+      <img src="git_branch_picture.jpg" alt="git branching picture" />
+      <h2>Branch in Git</h2>
+      <p>
+        The main idea behind the Git flow branching strategy is to isolate your work into different types of branches.
+        There are different branch types.
+      </p>
+      <a href="https://www.w3schools.com/git/git_branch.asp?remote=github">Read
+        more</a>
     </article>
   </main>
   <footer>
